# msnp11-sdk

./: .gitignore  Cargo.toml  README.md  build_for_android.sh
mock-server/: Cargo.toml
mock-server/src/: main.rs  mock_http.rs  mock_ns.rs  mock_sb.rs
msnp11-sdk/: Cargo.toml  uniffi.toml
msnp11-sdk/src/: build_client.rs  client.rs  connection_error.rs  event.rs  event_handler.rs  event_matcher.rs  internal_event.rs  lib.rs  list.rs  msnp_error.rs  msnp_list.rs  msnp_status.rs  passport_auth.rs  receive_split.rs  receive_split_into_base64.rs  sdk_error.rs
msnp11-sdk/src/commands/: adc.rs  chg.rs  cvr.rs  gcf.rs  mod.rs  reg.rs  rem.rs  usr_i.rs  usr_s.rs  uux.rs  ver.rs
msnp11-sdk/src/enums/: event.rs  internal_event.rs  mod.rs  msnp_list.rs  msnp_status.rs
msnp11-sdk/src/errors/: contact_error.rs  messaging_error.rs  mod.rs  p2p_error.rs  sdk_error.rs
msnp11-sdk/src/exports/: client.rs  mod.rs  switchboard_wrapper.rs
msnp11-sdk/src/http/: config.rs  http_client.rs  mod.rs
msnp11-sdk/src/http/xml/: envelope.rs  mod.rs  msgr_config.rs  tab.rs
msnp11-sdk/src/models/: file_transfer_request.rs  mod.rs  msn_object.rs  personal_message.rs  plain_text.rs  presence.rs  user_data.rs
msnp11-sdk/src/notification_server/: event_matcher.rs  mod.rs
msnp11-sdk/src/notification_server/commands/: adc.rs  adg.rs  blp.rs  chg.rs  cvr.rs  gcf.rs  gtc.rs  mod.rs  prp.rs  reg.rs  rem.rs  rmg.rs  sbp.rs  syn.rs  usr_i.rs  usr_s.rs  uux.rs  ver.rs  xfr.rs
msnp11-sdk/src/switchboard/: event_matcher.rs  mod.rs  switchboard.rs
msnp11-sdk/src/switchboard/commands/: ans.rs  cal.rs  mod.rs  msg.rs  usr.rs
msnp11-sdk/src/switchboard/p2p/: binary_header.rs  display_picture_session.rs
msnp11-sdk/src/switchboard_server/: event_matcher.rs  mod.rs  switchboard.rs
msnp11-sdk/src/switchboard_server/commands/: ans.rs  cal.rs  msg.rs  usr.rs
msnp11-sdk/src/switchboard_server/p2p/: binary_header.rs  bye.rs  direct_connection.rs  direct_connection_ok_result.rs  display_picture_session.rs  file_context.rs  listen_for_file.rs  mod.rs  p2p_session.rs  send_display_picture.rs
tests/: Cargo.toml
tests/src/: add_contact.rs  config.rs  lib.rs  login.rs  messaging.rs  tabs.rs
uniffi-bindgen/: Cargo.toml
