[package]
name = "mock-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "macros", "sync"] }
axum = "0.8.1"
hyper = "1.6.0"
hyper-util = "0.1.10"
tower-service = "0.3.3"
log = { version = "0.4.27", features = ["std"] }
env_logger = "0.11.8"