[package]
name = "mock-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "io-util", "net", "macros", "sync"] }
axum = "0.8.6"
hyper = "1.7.0"
hyper-util = "0.1.17"
tower-service = "0.3.3"
log = { version = "0.4.28", features = ["std"] }
env_logger = "0.11.8"