[package]
name = "msnp11-sdk"
description = "An MSNP11 client SDK"
repository = "https://github.com/campos02/msnp11-sdk"
license = "MIT"
version = "0.7.1"
edition = "2024"
readme = "../README.md"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "macros", "sync", "time"] }
base64 = "0.22.1"
log = { version = "0.4.27", features = ["std"] }
reqwest = "0.12.15"
quick-xml = { version = "0.38.0", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
urlencoding = "2.1.3"
rand = { version = "0.9.1", features = ["thread_rng"] }
guid-create = "0.4.1"
deku = "0.19.1"
sha1_smol = "1.0.1"
uniffi = { version = "0.29", features = [ "cli" ] }
async-channel = "2.3.1"
async-trait = "0.1.88"

[build-dependencies]
uniffi = { version = "0.29", features = [ "build" ] }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "msnp11_sdk"