[package]
name = "msnp11-sdk"
description = "An MSNP11 client SDK"
repository = "https://github.com/campos02/msnp11-sdk"
license = "MIT"
version = "0.10.0"
edition = "2024"
readme = "../README.md"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "io-util", "net", "macros", "sync", "time"] }
base64 = "0.22.1"
log = { version = "0.4.28", features = ["std"] }
reqwest = { version = "0.12.24", features = ["charset", "http2", "rustls-tls"], default-features = false }
quick-xml = { version = "0.38.3", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
urlencoding = "2.1.3"
rand = { version = "0.9.1", features = ["thread_rng"] }
guid-create = "0.5.2"
deku = "0.20.0"
sha1_smol = "1.0.1"
uniffi = "0.30.0"
async-channel = "2.5.0"
async-trait = "0.1.89"
thiserror = "2.0.17"

[build-dependencies]
uniffi = { version = "0.30.0", features = [ "build" ] }

[features]
tabs = []

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "msnp11_sdk"
