[package]
name = "msnp11-sdk"
description = "An MSNP11 client SDK"
repository = "https://github.com/campos02/msnp11-sdk"
license = "MIT"
version = "0.11.2"
edition = "2024"
readme = "../README.md"

[dependencies]
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread", "io-util", "net", "macros", "sync", "time"] }
tokio-util = "0.7.17"
base64 = "0.22.1"
log = { version = "0.4.28", features = ["std"] }
reqwest = { version = "0.12.24", features = ["charset", "http2", "rustls-tls"], default-features = false }
quick-xml = { version = "0.39.2", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
urlencoding = "2.1.3"
rand = { version = "0.10.0", features = ["thread_rng"] }
guid-create = "0.5.2"
deku = "0.20.0"
sha1_smol = "1.0.1"
uniffi = { version = "0.31.0", optional = true }
async-channel = "2.5.0"
async-trait = { version = "0.1.89", optional = true }
thiserror = "2.0.17"

[build-dependencies]
uniffi = { version = "0.31.0", features = [ "build" ], optional = true }

[features]
config = []
uniffi = ["config", "dep:uniffi", "dep:async-trait"]

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "msnp11_sdk"
